tests/ui/const-generics/min_const_generics/forbid-non-static-lifetimes.stderr
error: generic parameters may not be used in const operations
  --> $DIR/forbid-non-static-lifetimes.rs:7:22
   |
LL |     test::<{ let _: &'a (); 3 },>();
   |                      ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/forbid-non-static-lifetimes.rs:21:16
   |
LL |     [(); (|_: &'a u8| (), 0).1];
   |                ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: aborting due to 2 previous errors

